[tool.poetry]
name = "airbnb-backend"
version = "0.1.0"
description = ""
authors = ["jinwook song <wlsdnr129@naver.com>"]
license = "MIT"
readme = "README.md"
packages = [{include = "airbnb_backend"}]

[tool.poetry.dependencies]
python = "^3.10"
Django = "^4.1"
Pillow = "^9.2.0"
djangorestframework = "^3.14.0"
strawberry-graphql = {extras = ["debug-server"], version = "^0.137.1"}
strawberry-graphql-django = "^0.7"
PyJWT = "1.7"
django-environ = "^0.9.0"
django-cors-headers = "^3.13.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
